--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "framer-motion": "^12.23.24",
     "next": "15.5.4",
+    "playwright": "^1.56.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sass": "^1.93.2",
