--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "chart.js": "^4.5.1",
     "framer-motion": "^12.23.24",
     "next": "15.5.4",
     "playwright": "^1.56.0",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "19.1.0",
+    "react-select": "^5.10.2",
     "sass": "^1.93.2",
     "zod": "^4.1.12"
   },
