--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.0",
     "chart.js": "^4.5.1",
+    "chartjs-adapter-luxon": "^1.3.1",
     "framer-motion": "^12.23.24",
+    "luxon": "^3.7.2",
     "next": "15.5.4",
     "playwright": "^1.56.0",
     "react": "19.1.0",
@@ -22,6 +27,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/luxon": "^3.7.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
